syntax = "proto3";
package quip;
option go_package="github.com/GambitLLC/quip/libs/pb";

import "quip-messages.proto";
import "google/protobuf/empty.proto";

enum MatchState {
  MATCH_STATE_UNSPECIFIED = 0;
  MATCH_STATE_PENDING = 1;      // Match has been allocated and is waiting for connections.
  MATCH_STATE_PLAYING = 2;      // Match is in progress.
  MATCH_STATE_FINISHED = 3;     // Match has completed.
}

message MatchDetails {
  string match_id = 1;

  message Team {
    repeated string players = 1;
  }

  repeated Team teams = 2;
}

message CreateMatchRequest {
  GameConfiguration game_config = 1;
  MatchDetails match_details = 2;
}

message CreateMatchResponse {
  string connection = 1;
}

message UpdateMatchStateRequest {
	string id = 1;

	MatchState state = 2;
}

service Backend {
  rpc CreateMatch(CreateMatchRequest) returns (CreateMatchResponse);

	rpc UpdateMatchState(UpdateMatchStateRequest) returns (google.protobuf.Empty);
}